deployments/traefik/nginx/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.deepthot.org`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`www.nginx.deepthot.org`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: deepthot-org-staging-tls
